# CLARYON

./: .gitignore  CLAUDE.md  COMMANDS.md  Dockerfile  Dockerfile.gpu  README.md  WORKLOG.md  WORKLOG_v2.md  pyproject.toml  recompute_metrics.sh  run_benchmark.sh  run_benchmark_remaining.sh  run_psma.sh  run_q8.sh  singularity.def
.github/workflows/: ci.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
claryon/: __init__.py  __main__.py  cli.py  config_schema.py  determinism.py  inference.py  pipeline.py  progress.py  registry.py  safety.py
claryon/benchmark/: __init__.py  download_benchmark_datasets.py
claryon/encoding/: __init__.py  amplitude.py  angle.py  base.py
claryon/evaluation/: __init__.py  comparator.py  domain_shift.py  figures.py  geometric_difference.py  metrics.py  results_store.py
claryon/explainability/: __init__.py  base.py  conformal.py  gradcam.py  integrated_gradients.py  lime_.py  plots.py  quantum_gradients.py  shap_.py  utils.py
claryon/io/: __init__.py  base.py  center_labels.py  fdb_ldb.py  hilbert.py  nifti.py  predictions.py  tabular.py  tiff.py
claryon/models/: __init__.py  auto_complexity.py  base.py  ensemble.py  preset_resolver.py  presets.yaml
claryon/models/classical/: __init__.py  catboost_.py  cnn_2d.py  cnn_3d.py  cnn_3d_l2.py  cnn_3d_micro.py  debinn_.py  lightgbm_.py  mlp_.py  modernnca_.py  realmlp_.py  tabm_.py  tabpfn_.py  xgboost_.py
claryon/models/quantum/: __init__.py  angle_pqk_svm.py  hybrid.py  kernel_svm.py  projected_kernel_svm.py  qcnn_alt.py  qcnn_muw.py  qdc_hadamard.py  qdc_swap.py  qnn.py  quantum_gp.py  sq_kernel_svm.py  vqc.py
claryon/preprocessing/: __init__.py  binary_grouping.py  feature_selection.py  image_prep.py  radiomics.py  splits.py  state.py  tabular_prep.py
claryon/reporting/: __init__.py  latex_report.py  markdown_report.py  method_descriptions.yaml  references.bib  structured_report.py
configs/: example_benchmark.yaml  example_nifti.yaml  example_tabular.yaml  iris_auto.yaml  iris_classical.yaml  iris_full.yaml  iris_full_preprocess.yaml  iris_medium.yaml  iris_medium_nopreprocess.yaml  iris_quantum.yaml  nifti_cnn.yaml  run_validation.sh
configs/eanm_abstract/: angle_pqk_hcc_q8.yaml  angle_pqk_psma11_q8.yaml  angle_pqk_wisconsin_q8.yaml  cervical.yaml  hcc.yaml  hcc_q8.yaml  hcc_q8_large.yaml  psma11.yaml  psma11_q8.yaml  psma11_q8_large.yaml  qcnn_hcc_q8.yaml  qcnn_psma11_q8.yaml  qcnn_wisconsin_q8.yaml  wisconsin.yaml  wisconsin_q8.yaml  wisconsin_q8_large.yaml  wisconsin_resume.yaml
datasets/: DATA_SOURCES.md
datasets/cervical-cancer/: train.csv
datasets/hcc-survival/: train.csv
datasets/psma11/: feature_map.csv  infer.csv  train.csv
datasets/psma11/raw/: FDB.csv  LDB.csv
datasets/wisconsin-breast-cancer/: train.csv
demo_data/iris/: iris.csv  iris_binary.csv
docs/: architecture.md  config_reference.md  contributor_guide.md  model_guide.md  user_guide.md
docs/development/: IMPLEMENTATION_PLAN.md  REQUIREMENTS.md  WORKLOG.md
examples/notebooks/: 01_quickstart.ipynb  02_tabular_classification.ipynb  03_quantum_models.ipynb  04_nifti_imaging.ipynb  05_explainability.ipynb  06_results_dashboard.ipynb  07_radiomics.ipynb  08_custom_model_guide.ipynb
scripts/: compute_gdq.py  generate_config_docs.py  install.ps1  install.sh  patch_pipeline.py  run_benchmark.sh  run_qcnn_benchmark.sh  run_validation.sh  setup_experiments.py
source_archive/benchmark/: analysis.py  base_settings.csv  competitor_runner.py  config.py  debinn_runner.py  download_benchmark_datasets.py  ensemble_aggregator.py  fold_generator.py  preprocess_benchmark.py  project_builder.py  results_collector.py  run_benchmark.py  settings_generator.py  split_train_test.py
source_archive/eanm_ai_qc/: 03_explainability.ipynb  base.py  pl_kernel_svm.py  pl_qcnn_alt.py  pl_qcnn_muw.py
tests/: conftest.py  test_config_schema.py  test_determinism.py  test_qcnn_quarantine.py  test_registry.py  test_safety.py  test_verification.py
tests/fixtures/: center_labels_test.csv  generate_fixtures.py  mock_debinn.sh  synthetic_multicenter.py
tests/fixtures/data/: pyradiomics_minimal.yaml
tests/test_encoding/: test_amplitude.py  test_angle.py  test_base.py
tests/test_evaluation/: test_bootstrap_extended.py  test_comparator.py  test_domain_shift.py  test_figures.py  test_geometric_difference.py  test_metrics.py
tests/test_explainability/: test_base.py  test_gradcam.py  test_lime.py  test_shap.py
tests/test_integration/: test_classical_pipeline.py  test_full_pipeline.py  test_late_fusion.py  test_multicenter_pipeline.py  test_reporting.py
tests/test_io/: test_base.py  test_center_labels.py  test_fdb_ldb.py  test_hilbert.py  test_nifti.py  test_predictions.py  test_tabular.py  test_tiff.py
tests/test_models/: test_auto_complexity.py  test_base.py  test_ensemble.py  test_presets.py
tests/test_preprocessing/: test_binary_grouping.py  test_center_splits.py  test_feature_selection.py  test_image_norm.py  test_nyul.py  test_splits.py  test_state.py  test_tabular_prep.py  test_zscore.py
(+22 files in other folders)
